--- a/modules-available/locationinfo/templates/page-config-panel-summary.html
+++ b/modules-available/locationinfo/templates/page-config-panel-summary.html
@@ -77,7 +77,10 @@
 									<label for="input-roomplanner">{{lang_useRoomplanner}}</label>
 								</div>
 								<div class="col-sm-7">
-									<input id="input-roomplanner" type="checkbox" name="roomplanner" {{roomplanner_checked}}>
+									<select class="form-control" name="roomplanner" id="input-roomplanner">
+										<option value="0" id="roomplanner0">{{lang_countIp}}</option>
+										<option value="1" id="roomplanner1">{{lang_countRoomplan}}</option>
+									</select>
 								</div>
 								<div class="col-sm-2">
 									<p class="btn btn-static helptext" title="{{lang_roomplannerTooltip}}">
@@ -168,7 +171,10 @@
 	</div>
 	<div class="text-right">
 		<a href="?do=locationinfo&amp;show=panels" class="btn btn-default">{{lang_cancel}}</a>
-		<button type="submit" class="btn btn-primary">{{lang_save}}</button>
+		<button type="submit" class="btn btn-primary">
+			<span class="glyphicon glyphicon-floppy-disk"></span>
+			{{lang_save}}
+		</button>
 	</div>
 </form>
 
