[locationinfo] fix overrides reference is null error - the switch for activating override for a room is now working correctly

--- a/modules-available/locationinfo/templates/page-config-panel-default.html
+++ b/modules-available/locationinfo/templates/page-config-panel-default.html
@@ -549,7 +549,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	function unloadOverrideContent(id) {
 		var $panelBody = $('#overrideRoom' + id).find('div.panel-body');
 		$panelBody.find('div.list-group').remove();
-		delete overrides[id]
+		if (overrides !== null && overrides[id] !== undefined) delete overrides[id]
 	}
 
 	function delParent() {
